# biocommons.github.io

./: .gitignore  .readthedocs.yaml  404.html  ADR-update  CNAME  LICENSE  Makefile  README.md  index.html  index.html.in  index.py  index.yaml  mkdocs.yml  notes.md  pyproject.toml  redirect-map.yml~  requirements.txt  styles.css  tree
.github/: CODEOWNERS
archive/: tools.md  values.md
code-of-conduct/: index.html
coding-guidelines/: index.html
community/: index.html
community/code-of-conduct/: index.html
community/getting-connected/: index.html
community/governance/: index.html
contributing/: index.html
contributing/CONTRIBUTING/: index.html
contributing/coding-guidelines/: index.html
contributing/getting-started/: index.html
contributing/tools/: index.html
docs/: .pages  coding-guidelines.md  community.md  connecting.md  contributing.md  governance.md  hackathon-2023.md  index.md  notes.md  projects.md  redirect-map.yml  tools.md  values.md
docs/about/: index.md  values.md
docs/adrs/: adr-0002-centralize-discussions.md  index.md  template.md
docs/community/: .pages  code-of-conduct.md  getting-connected.md  governance.md  index.md  values.md
docs/contributing/: .pages  code-of-conduct.md  coding-guidelines.md  index.md  (+5 more)
files/: index.html
governance/: index.html
hackathon-2023/: index.html
images/: branching-model.mmd
mission/: index.html
notes/: index.html
projects/: index.html
reboot/: index.html
search/: search_index.json
stylesheets/: extra.css
teams/: index.html
tools/: index.html
values/: index.html
(+37 files in other folders)
