[project]
name = "biocommons-docs"
version = "0.0.0"
description = "biocommons documentation"
requires-python = "==3.14.*"
dependencies = [
    "mkdocs",
    "mkdocs-autolinks-plugin",
    "mkdocs-awesome-pages-plugin",
    "mkdocs-glightbox",
    "mkdocs-macros-plugin",
    "mkdocs-material",
    "mkdocs-material-extensions",
    "mkdocs-mermaid2-plugin",
    "mkdocs-multirepo-plugin",
    "mkdocs-redirects",
    "mkdocs-schema-reader",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []
